src/objects/Attachment__c.object
<CustomObject>
    <description>Custom Attachment Wrapper</description>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Telephone bill</fullName>
                </value>
                <value>
                    <fullName>Cable and internet bill</fullName>
                </value>
                <value>
                    <fullName>Gas bill</fullName>
                </value>
                <value>
                    <fullName>Electric bill</fullName>
                </value>
                <value>
                    <fullName>Garbage bill</fullName>
                </value>
                <value>
                    <fullName>Water bill</fullName>
                </value>
                <value>
                    <fullName>Paystub</fullName>
                </value>
                <value>
                    <fullName>Public benefits record</fullName>
                </value>
                <value>
                    <fullName>School record</fullName>
                </value>
                <value>
                    <fullName>Paystub with employer address</fullName>
                </value>
                <value>
                    <fullName>Letter from employer</fullName>
                </value>
                <value>
                    <fullName>Letter documenting homelessness</fullName>
                </value>
                <value>
                    <fullName>Money order</fullName>
                </value>
                <value>
                    <fullName>Cancelled check</fullName>
                </value>
                <value>
                    <fullName>Debit from your bank account</fullName>
                </value>
                <value>
                    <fullName>Screenshot of online payment</fullName>
                </value>
                <value>
                    <fullName>Copy of Lease</fullName>
                </value>
                <value>
                    <fullName>Spreadsheet</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Word Doc</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>etc</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Application_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Application Member</label>
        <referenceTo>Application_Member__c</referenceTo>
        <relationshipName>Custom_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Application_Preference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Application Preference</label>
        <referenceTo>Application_Preference__c</referenceTo>
        <relationshipName>Custom_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipName>Custom_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Upload_Date__c</fullName>
        <label>Upload Date</label>
        <type>Date</type>
    </fields>
    <label>Attachment</label>
    <nameField>
        <label>Custom Attachment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attachments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>